--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -31,14 +31,18 @@
     "@nestjs/typeorm": "^8.0.2",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "@sendgrid/mail": "^7.4.7",
     "@types/config": "^0.0.39",
     "@types/lodash": "^4.14.173",
+    "@types/minio": "^7.0.10",
     "@types/passport-jwt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "config": "^3.3.6",
+    "ejs": "^3.1.6",
     "lodash": "^4.17.21",
+    "minio": "^7.0.19",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
