--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ejs": "^3.1.6",
     "lodash": "^4.17.21",
     "minio": "^7.0.19",
+    "moment": "^2.29.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
