--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "class-validator": "^0.13.1",
     "config": "^3.3.6",
     "ejs": "^3.1.6",
+    "firebase-admin": "^10.0.1",
     "lodash": "^4.17.21",
     "minio": "^7.0.19",
     "moment": "^2.29.1",
+    "onesignal-node": "^3.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
