--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.4",
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/jwt": "^8.0.0",
